--- a/nlu.yml
+++ b/nlu.yml
@@ -40,3 +40,186 @@ nlu:
      
 
 
+- intent: membership
+  examples: |
+    - 멤버십 어떤게 있어?
+    - 멤버십 혜택이 뭐에요?
+    - 멤버십 혜택이 뭐야?
+    - 멤버십 혜택 알려줘
+    - 멤버십 가입 방법을 알려주세요
+    - 멤버십 가입할래
+    - 멤버십 가입은 어떻게 해?
+    - 멤버십 가입 조건이 뭐에요?
+    - 멤버십에 필요한 앱 있어?
+    - 할인 받을 수 있는 방법 있어?
+    - 지원되는 할인 카드 알려줘
+    - 적립은 어떻게 할 수 있어?
+
+- intent: opening_hours
+  examples:
+    - 오늘 영업 시간이 어떻게 되나요?
+    - 몇시까지 영업해?
+    - 몇 시까지 영업하나요?
+    - 주말에는 영업해?
+    - 몊시에 문열어
+    - 몊시에 문 닫아?
+    - 가게 영업 시간을 알려주세요
+    - 가게 영업 시간
+    - 문 닫는 시간
+    - 영업 시간이 어떻게 되나요?
+    - 여기는 언제 영업하나요?
+    - 영업 시간을 알려주세요
+
+- intent: allergy_question
+  examples:
+    - 알레르기가 있는 메뉴이 있나요?
+    - 알레르기 참조표 알려줘
+    - 알레르기가 있어
+    - 알레르기 있는 사람에게 주의할 만한 거 있어?
+    - 알레르기 유발 음식이 있나요?
+    - 알레르기에 대해 물어볼게요
+    - 알레르기
+    - 알레르기 유발 음식 목록을 알려주세요
+    - [아메리카노]{"entity": "menu"}에 대한 알레르기 정보를 알려주세요
+    - 알레르기가 있는 사람을 위한 음식이 있나요?
+    - 알레르기를 유발할 수 있는 것들이 무엇인가요?
+
+- intent: menu_description
+  examples:
+    - [아메리카노]{"entity": "menu"}에 대해 설명해주세요
+    - [카페라떼]{"entity": "menu"}에 대해서 알려주세요
+    - [아이스티]{"entity": "menu"}는 달아?
+    - [카푸치노]{"entity": "menu"} 뜨거운 거 밖에 안되나?
+    - [딸기 스무디]{"entity": "menu"}에 대해 알려주세요
+    - [블루베리 요거트 스무디]{"entity": "menu"}가 뭐에요?
+    - [그린티 프라푸치노]{"entity": "menu"}에 는 시원해?
+    - [플레인 베이글]{"entity": "menu"}이 어떤 건가요?
+    - [토마토 샌드위치]{"entity": "menu"}에 뭐가 들어가?
+    - [크로와상]{"entity": "menu"} 설명 좀 부탁해요
+    - [아보카도 샐러드]{"entity": "menu"}가 뭐에요?
+    - [크림 치즈 케이크]{"entity": "menu"}에 대해 알려주세요
+    - [딸기 타르트]{"entity": "menu"} 설명 부탁해요
+
+
+- intent: menu_recommend
+  examples:
+    - [추천 메뉴]{"entity": "menu"} 뭐 있어요?
+    - [오늘의 추천]{"entity": "menu"}이 뭐예요?
+    - [인기 메뉴]{"entity": "menu"} 추천해주세요
+    - [베스트셀러]{"entity": "menu"} 뭐 있나요?
+    - [무엇]{"entity": "menu"}을 추천해주시겠어요?
+    - [이 가게 추천 메뉴]{"entity": "menu"}가 뭐예요?
+    - [추천할만한 메뉴]{"entity": "menu"} 뭐 있어요?
+    - [오늘은 무엇이 좋을까요?]{"entity": "menu"} 추천해주세요
+    - [무엇을]{"entity": "menu"} 추천해?
+    - 추천 메뉴
+    - 인기 메뉴
+
+- intent: orderlist
+  examples:
+    - 선택된 메뉴를 확인할래요
+    - 장바구니
+    - 담긴거 보여줘
+    - 선택된 거 보여줘
+    - 우리가 지금 몇개 주문했지?
+    - 지금까지 고른 메뉴가 뭐예요?
+    - 주문한 음식 목록을 보여주세요
+    - 선택한 메뉴 리스트를 보여주세요
+    - 주문한 음식을 확인할 수 있을까요?
+
+- intent: lost
+  examples:
+    - [지갑]{"entity": "item"}가 없어졌어
+    - [핸드폰]{"entity": "item"}을 주운거 있어?
+    - [열쇠]{"entity": "item"}를 습득된 거 있어?
+    - 어제 [가방]{"entity": "item"}을 잃어버렸어
+    - [이어폰]{"entity": "item"}을 잃어버렸어요
+    - [지갑]{"entity": "item"}을 잃어버렸는데 찾을 수 있을까요?
+    - [심]{"entity": "item"}을 잃어버렸는데 찾을 수 있을까요?
+    - [팔찌]{"entity": "item"}를 잃어버렸는데 찾을 수 있을까요?
+    - [열쇠]{"entity": "item"}를 분실했어요
+    - [책]{"entity": "item"}을 잃어버렸는데 찾을 수 있을까요?
+    - [이어폰]{"entity": "item"}이 어디 있을까요?
+    - [공책]{"entity": "item"}을 잃어버렸어요
+    - [선글라스]{"entity": "item"}를 잃어버렸는데 찾을 수 있을까요?
+    - [키링]{"entity": "item"}을 분실했어요
+    - [장지갑]{"entity": "item"}을 잃어버렸는데 찾을 수 있을까요?
+    - [핸드폰]{"entity": "item"}이 어디 있을까요?
+
+- intent: location
+  examples:
+    - [화장실]{"entity": "facility"}이 어디에 있나요?
+    - [흡연실]{"entity": "facility"}이 어디에 있나요?
+    - [음료대]{"entity": "facility"}가 어디에 있나요?
+    - [주차장]{"entity": "facility"}이 어디에 있나요?
+    - [ATM]{"entity": "facility"}이 어디에 있나요?
+    - [출입구]{"entity": "facility"}가 어디에 있나요?
+    - [엘리베이터]{"entity": "facility"}가 어디에 있나요?
+    - [카운터]{"entity": "facility"}가 어디에 있나요?
+    - [정류장]{"entity": "facility"}이 어디에 있나요?
+    - [무료 와이파이]{"entity": "facility"}가 어디에 있나요?
+    - [장애인 화장실]{"entity": "facility"}이 어디에 있나요?
+    - [음식점]{"entity": "facility"}이 어디에 있나요?
+    - [회의실]{"entity": "facility"}이 어디에 있나요?
+    - [주차장]{"entity": "facility"}은 어디에 있나요?
+    - [카페]{"entity": "facility"}가 어디에 있나요?
+    - [로비]{"entity": "facility"}가 어디에 있나요?
+
+- intent: avengers
+  examples:
+    - 사람이 쓰러졌어
+    - 불이나
+    - 도와줘
+    - 피가 나
+    - 숨이 막혀
+    - 숨을 못셔
+    - 큰일 났어
+    - 심장 마비 환자가 발생했어요! 
+    - AED가 어디있어?
+    - 불이 나서 화재 경보가 울렸어요!
+    - 도와주세요!
+    - 손님이 실신했어요.
+    - 의식이 없어요!
+    - 응급구조대를 불러주세요!
+    - 심각한 출혈을 입었어요
+    - 저기요, 손님이 경련을 일으켜요
+
+- intent: undo
+  examples: |
+    - 주문 취소해줘
+    - 아니다 방금꺼 취소해줘
+    - 이전으로 돌아가고 싶어
+    - 방금 주문을 취소해주세요
+    - 이전 선택을 취소하고 싶어요
+
+- intent: end
+  examples: |
+    - 일단 좀 더 생각해볼게
+    - 다음 사람 먼저 받아줘
+    - 다음에 올게
+    - 여기까지 주문할게요
+    - 주문 끝내겠습니다
+    - 이제 그만 주문할게요
+
+- intent: pay
+  examples: |
+    - 주문을 마쳐줘
+    - 그만 주문할래
+    - 주문 완료할게
+    - 결제할게요
+    - 계산해주세요
+    - 지불하고 싶어요
+    - 카드
+    - 현금
+    - 계산
+    - 결제
+    - 카드 결제
+    - 결제할게
+    - 계산해줘
+    - 지불하고 싶어
+    - 카드로 계산할게
+    - 현금으로 계산할게
+    - 계산하러 왔어
+    - 결제 원해
+    - 이걸로 계산할게
+    - 카드로 결제 부탁해
