--- a/domain.yml
+++ b/domain.yml
@@ -1,37 +1,34 @@
 version : "3.1"
-#https://learning.rasa.com/archive/conversational-ai-2/basic-forms/ 
-
-
-forms:
-  order_form:
-    required_slots:
-      menu_name:
-      - entity: menu
-        type : from_entity
-      menu_counts:
-      - entity: counts
-        type : from_entity
 
 slots:
-  menu_name:
-    type: text
-    influence_conversation: true
-  menu_counts:
-    type: text
-    influence_conversation: true
 
 entities:
   - menu
-  - counts
+  - size
+  - count
 
 
 intents:
   - start
-  - menu_list
-  - menu_description
-  - menu_order
-
-response:
-  ordered:
-  - text: 주문이 접수되었습니다!
+  - order/only_menu
+  - order/only_count
+  - order/only_size
+  - order/menu_count
+  - order/menu_size
+  - order/count_size
+  - payment
+  
+responses:
+  utter_want_to_drink_order:
+  - text: "음료는 어떤 걸로 하시겠어요?"
+  utter_ask_take_out:
+  - text: "포장이신가요? 드시고 가시나요?
+  utter_ask_size:
+  - text : "사이즈는 어떤 걸로 하시겠어요"
+  utter_did_that_help:
+  - text : "도움이 필요 하신가요?
+  utter_end:
+  - text : "주무니 완료 되었습니다."
+  utter_confirm_order:
+  - text: 주문 하신 으ㅡㅁ료 {menu}{size} 사이즈 {count}잔 맞으신가요?
 
