--- a/domain.yml
+++ b/domain.yml
@@ -45,20 +45,27 @@ intents:
   - end
   
 responses:
-  utter_want_to_drink_order:
-  - text: "음료는 어떤 걸로 하시겠어요?"
-  utter_ask_take_out:
-  - text: "포장이신가요? 드시고 가시나요?
   utter_ask_size:
-    - condition:
-      - type: slot
-        name : size
-        value : False
-        text : "사이즈는 어떤 걸로 하시겠어요"
-  utter_did_that_help:
-  - text : "도움이 필요 하신가요?
+    - conditon:
+        - type: slot
+          name: size
+          value: False
+      text: "{menu_name} 사이즈는 어떤 걸로 하시겠어요?"
+  utter_ask_count:
+    - conditon:
+        - type: slot
+          name: count
+          value: False
+      text: "{menu_name}은 몇잔 주문 하시겠어요?"
+  
+  utter_greet:
+    - text: "반갑습니다. 주문부터 하세요."
   utter_end:
-  - text : "주문이 완료 되었습니다."
+    - text: "주문이 완료되었습니다."
   utter_confirm_order:
-  - text: 주문 하신 음료 {menu}{size} 사이즈 {count}잔 맞으신가요?
+    - text: "주문확인 해드리겠습니다. {menu_name} {size} {count}잔 맞으신가요?"
+  utter_ask_add_order:
+    - text: "추가로 주문 하실 게 있으신가요?"
+  utter_ask_payment:
+    - text: "주문 확인 되셨습니다. 결제는 어떻게 하시나요?"
 
