--- a/domain.yml
+++ b/domain.yml
@@ -83,3 +83,17 @@ responses:
     - text: "행복해요."
   utter_goodbye:
     - text: "안녕히가세요"
+  utter_decribe_menu_type:
+    - text: "주문 가능 종류로는 커피, 케잌이 있습니다"
+  utter_decribe_menu_list:
+    - text: "커피, 사이다가 있습니다."
+  utter_want_to_drink_order:
+    - text: "물로 드릴까요?"
+  utter_ask_size:
+    - text: "어떤 사이즈를 원하시나요"
+  utter_ask_count:
+    - text: "몇개 드릴까요?"
+  utter_confirm_order:
+    - text: "주문 내역 확인해주세요"
+  utter_ask_pay:
+    - text: "주문 확인 되셨습니다. 결제는 어떻게 하시나요?"
