--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -23,25 +23,7 @@ nlu:
       - 이봐라
       - 주문할게요
       - 주문을 하고 싶어
-
-  - intent: request/menu_type
-    examples: |
-      - 매뉴 종류 알려줘
-      - 메뉴 종류
-      - 메뉴 어떤 거 있어요?
-      - 메뉴
-      - 메뉴판
-
-  - intent: request/menu_list
-    examples: |
-      - 메뉴를 알려줘
-      - 어떤 메뉴가 있나요
-      - [커피]{"entity": "menu_type"} 메뉴에는 어떤게 있니
-      - [에이드]{"entity" : "menu_type"} 메뉴에는 어떤게 있니
-
-  - intent: request/menu_recommend
-
-  - intent: request/orderlist
+  - intent: request/order_list
     examples: |
       - 선택된 메뉴를 확인할래요
       - 장바구니
@@ -52,30 +34,13 @@ nlu:
       - 주문한 음식 목록을 보여주세요
       - 선택한 메뉴 리스트를 보여주세요
       - 주문한 음식을 확인할 수 있을까요?
-
-  - intent: request/menu_description
-    examples: |
-      - [아메리카노]{"entity": "menu"}에 대해 설명해주세요
-      - [카페라떼]{"entity": "menu"}에 대해서 알려주세요
-      - [아이스티]{"entity": "menu"}는 달아?
-      - [카푸치노]{"entity": "menu"} 뜨거운 거 밖에 안되나?
-      - [딸기 스무디]{"entity": "menu"}에 대해 알려주세요
-      - [블루베리 요거트 스무디]{"entity": "menu"}가 뭐에요?
-      - [그린티 프라푸치노]{"entity": "menu"}에 는 시원해?
-      - [플레인 베이글]{"entity": "menu"}이 어떤 건가요?
-      - [토마토 샌드위치]{"entity": "menu"}에 뭐가 들어가?
-      - [크로와상]{"entity": "menu"} 설명 좀 부탁해요
-      - [아보카도 샐러드]{"entity": "menu"}가 뭐에요?
-      - [크림 치즈 케이크]{"entity": "menu"}에 대해 알려주세요
-      - [딸기 타르트]{"entity": "menu"} 설명 부탁해요
-
   - intent: request/time
     examples: |
       - 오늘 영업 시간이 어떻게 되나요?
       - 몇시까지 영업해?
       - 몇 시까지 영업하나요?
       - 주말에는 영업해?
-      - 몊시에 문열어
+      - 몇 시에 문열어
       - 몊시에 문 닫아?
       - 가게 영업 시간을 알려주세요
       - 가게 영업 시간
@@ -83,54 +48,29 @@ nlu:
       - 영업 시간이 어떻게 되나요?
       - 여기는 언제 영업하나요?
       - 영업 시간을 알려주세요
-
-  - intent: request/location
+      - 몇시에 문여나요?
+      - 오픈 시간
+      - 닫는 시간
+  - intent: request/location_toilet
     examples: |
-      - [화장실]{"entity": "facility"}이 어디에 있나요?
-      - [흡연실]{"entity": "facility"}이 어디에 있나요?
-      - [음료대]{"entity": "facility"}가 어디에 있나요?
-      - [주차장]{"entity": "facility"}이 어디에 있나요?
-      - [ATM]{"entity": "facility"}이 어디에 있나요?
-      - [출입구]{"entity": "facility"}가 어디에 있나요?
-      - [엘리베이터]{"entity": "facility"}가 어디에 있나요?
-      - [카운터]{"entity": "facility"}가 어디에 있나요?
-      - [정류장]{"entity": "facility"}이 어디에 있나요?
-      - [무료 와이파이]{"entity": "facility"}가 어디에 있나요?
-      - [장애인 화장실]{"entity": "facility"}이 어디에 있나요?
-      - [음식점]{"entity": "facility"}이 어디에 있나요?
-      - [회의실]{"entity": "facility"}이 어디에 있나요?
-      - [주차장]{"entity": "facility"}은 어디에 있나요?
-      - [카페]{"entity": "facility"}가 어디에 있나요?
-      - [로비]{"entity": "facility"}가 어디에 있나요?
-
-  - intent: lost
+      - 화장실이 어디야?
+      - 화장실에 가고싶어.
+  - intent: request/location_water
     examples: |
-      - 분실물이 있나요?
-
-  # https://rasa.com/blog/introducing-entity-roles-and-groups/
+      - 물 먹고 싶어.
+      - 물 좀 주세요.
+      - 목마른데 물 좀 주세요.
   - intent: order
     examples: |
-      - [아이스아메리카노]{"entity" : "menu"} 주세요
-      - [아아]{"entity" : "menu" , "group" : "1"} [한잔]("entity" : "counts", "group" : 1)요
-      - [아이스티]{"entity" : "menu" , "group" : "1"} [세잔]("entity" : "counts", "group" : "1") 이랑 [케이크]{"entity" : "menu" , "group" : "2"}  [하나]{"entity" : "counts" , "group" : "2"} 요
-
-  - intent: undo
-    examples: |
-      - 주문 취소해줘
-      - 아니다 방금꺼 취소해줘
-      - 이전으로 돌아가고 싶어
-      - 방금 주문을 취소해주세요
-      - 이전 선택을 취소하고 싶어요
-
-  - intent: end
-    examples: |
-      - 일단 좀 더 생각해볼게
-      - 다음 사람 먼저 받아줘
-      - 다음에 올게
-      - 여기까지 주문할게요
-      - 주문 끝내겠습니다
-      - 이제 그만 주문할게요
-
+      - 아이스아메리카노 하나 주세요
+      - 참깨빵위에 순쇠고기 패티 두장 특별한 소스 양상추 
+      - 아아 하나요
+      - 마카롱 250개 주세요 
+      - 아이스아메리카노 하나
+      - 카페라떼 2잔이랑 따듯한 아메리카노 5잔 주세요
+      - 생크림 딸기 케이크 2개 주세요
+      - 아이스아메리카노 샷추가.
+      - 따듯한 아이스아메리카노 주세요
   - intent: pay
     examples: |
       - 주문을 마쳐줘
@@ -153,3 +93,18 @@ nlu:
       - 결제 원해
       - 이걸로 계산할게
       - 카드로 결제 부탁해
+  - intent: cancel
+    examples: |
+      - 일단 좀 더 생각해볼게
+      - 다음 사람 먼저 받아줘
+      - 다음에 올게
+      - 여기까지 주문할게요
+      - 주문 끝내겠습니다
+      - 이제 그만 주문할게요
+  - intent: undo
+    examples: |
+      - 주문 취소해줘
+      - 아니다 방금꺼 취소해줘
+      - 이전으로 돌아가고 싶어
+      - 방금 주문을 취소해주세요
+      - 이전 선택을 취소하고 싶어요
