--- a/data/story.yml
+++ b/data/story.yml
@@ -1,30 +1,53 @@
 stories:
-- story: cafe_order  # name of the story - just for debugging
+- story: greet  
   steps:
-  - intent: start                         
+  - intent: greet                         
   - action: utter_greet
-  - intent: request/menu_type
-  - action: utter_decribe_menu_type
-
-  - intent: request/menu_list
-  - action: utter_decribe_menu_list
-
-  - intent: order
-  - action: utter_want_to_drink_order
-  - action: utter_ask_size
-  - action: utter_ask_count
-
-  - intent: confirm
-  - action: utter_confirm_order
-
-  - intent: pay
-  - action: utter_ask_pay
-
-  - intent: end
-  - action: utter_end
-- story: cafe_order2  # name of the story - just for debugging
+  - checkpoint: waitting
+  
+- story: order
   steps:
-  - intent: start                         
-  - action: utter_greet
-  - intent: end
+  - checkpoint: waitting 
+  - intent: order                
+  - action: utter_order
+  - checkpoint: waitting
+  
+- story: toilet_location
+  steps:
+  - checkpoint: waitting 
+  - intent: request/location_toilet                
+  - action: utter_request/location_toilet  
+  - checkpoint: waitting
+  
+- story: end_time
+  steps:
+  - checkpoint: waitting 
+  - intent: request/time          
+  - action: utter_request/time
+  - checkpoint: waitting
+
+- story: end_time
+  steps:
+  - checkpoint: waitting 
+  - intent: request/time          
+  - action: utter_request/time
+  - checkpoint: waitting
+  
+- story: undo
+  steps:
+  - checkpoint: waitting 
+  - intent: undo               
+  - action: utter_undo
+  - checkpoint: waitting
+  
+- story: cancel
+  steps:
+  - checkpoint: waitting 
+  - intent: cancel               
   - action: utter_end
+  
+- story: pay
+  steps:
+  - checkpoint: waitting 
+  - intent: pay                
+  - action: utter_pay
