--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -62,15 +62,15 @@ nlu:
       - 목마른데 물 좀 주세요.
   - intent: order
     examples: |
-      - 아이스아메리카노 하나 주세요
-      - 참깨빵위에 순쇠고기 패티 두장 특별한 소스 양상추 
-      - 아아 하나요
-      - 마카롱 250개 주세요 
-      - 아이스아메리카노 하나
-      - 카페라떼 2잔이랑 따듯한 아메리카노 5잔 주세요
-      - 생크림 딸기 케이크 2개 주세요
-      - 아이스아메리카노 샷추가.
-      - 따듯한 아이스아메리카노 주세요
+      - [아이스](is_hot)[아메리카노](name)[한 잔](count) 주세요.
+      - [아메리카노](name) [tall](size) size 주세요.
+      - [아](is_hot)[아](name) 주세요.
+      - [tall](size)
+      - [grande](size)
+      - [venti](size)
+      - [아메리카노](name)
+      - [카페라떼](name)
+      - [빅맥](name)
   - intent: pay
     examples: |
       - 주문을 마쳐줘
